--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -8,6 +8,8 @@
 
 @media screen and (max-width: 635px) {
   .footer {
+    font-size: 14px;
+    line-height: 1.2;
     padding-top: 48px;
     padding-bottom: 36px;
   }
