--- a/blocks/gallery.css
+++ b/blocks/gallery.css
@@ -11,12 +11,13 @@
   flex-direction: column;
   border-radius: 15px;
   overflow: hidden;
-  height: 361px;
+
   justify-content: center;
 }
 
 .gallery__image {
-  width: 100%;
+  object-fit: cover;
+  object-position: 50% 50%;
   height: 282px;
 }
 
@@ -24,7 +25,7 @@
   display: flex;
   background-color: white;
   color: black;
-  padding: 0 20px 0 25px;
+  padding: 25px 30px 25px 20px;
   align-items: center;
   justify-content: space-between;
 }
@@ -32,6 +33,8 @@
 .gallery__text {
   font-weight: 900;
   line-height: 1.2;
+  margin: 0;
+  max-width: 215px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -42,4 +45,17 @@
   width: 21px;
   height: 18px;
   border: none;
+  transition: opacity 1s ease;
+}
+
+.gallery__like-button:hover {
+  opacity: 50%;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 635px);
+ {
+  .gallery {
+    padding-top: 36px;
+  }
 }
