--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,5 +1,5 @@
 .header {
-  border-bottom: solid 1px #545454;
+  border-bottom: solid 1px rgba(84, 84, 84, 1);
   max-width: 880px;
   width: 100%;
   position: relative;
