--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -27,6 +27,7 @@
   line-height: 1.2;
   font-weight: 500;
   grid-area: title;
+  max-width: 375px;
   margin: 0;
   transition: font-size 1s ease;
   text-overflow: ellipsis;
@@ -39,6 +40,7 @@
   line-height: 1.2;
   font-weight: 400;
   grid-area: description;
+  max-width: 415px;
   margin: 0;
   transition: font-size 1s ease;
   text-overflow: ellipsis;
@@ -51,7 +53,8 @@
   height: 24px;
   width: 24px;
   grid-area: button;
-  border: inset 2px white;
+  border: solid 2px white;
+  border-radius: 2px;
   transition: opacity 1s ease;
 }
 
@@ -60,17 +63,20 @@
   height: 50px;
   width: 150px;
   margin-left: auto;
-  border: inset 2px white;
+  border: solid 2px white;
+  border-radius: 2px;
   transition: width 1s ease;
   transition: opacity 1s ease;
 }
 
 .profile__edit-button:hover {
   opacity: 60%;
+  cursor: pointer;
 }
 
 .profile__add-button:hover {
   opacity: 60%;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 785px) {
@@ -104,17 +110,26 @@
 
   .profile__title {
     font-size: 22px;
-    font-weight: 500;
+    max-width: 196px;
   }
 
   .profile__description {
     font-size: 14px;
     grid-column-end: span 2;
     justify-self: center;
+    max-width: 282px;
   }
 
   .profile__add-button {
     margin-top: 36px;
     width: 100%;
+    background-size: 16px;
+  }
+
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+    background-size: 7.5px;
+    border: solid 1px white;
   }
 }
