--- a/blocks/gallery.css
+++ b/blocks/gallery.css
@@ -9,7 +9,7 @@
 .gallery__card {
   display: flex;
   flex-direction: column;
-  border-radius: 15px;
+  border-radius: 10px;
   overflow: hidden;
   justify-content: center;
 }
@@ -24,7 +24,7 @@
   display: flex;
   background-color: white;
   color: black;
-  padding: 25px 30px 25px 20px;
+  padding: 25px 20px;
   align-items: center;
   justify-content: space-between;
 }
@@ -52,8 +52,7 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 635px);
- {
+@media screen and (max-width: 635px) {
   .gallery {
     padding-top: 36px;
   }
