--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -78,7 +78,6 @@
 .modal__form {
   display: flex;
   flex-direction: column;
-  row-gap: 30px;
 }
 
 .modal__input {
@@ -89,6 +88,7 @@
   color: #000;
   overflow: hidden;
   padding-bottom: 13px;
+  margin-bottom: 30px;
 }
 
 /* .modal__input::placeholder,
@@ -103,7 +103,6 @@
 I cannot get the above to render to the browser, it's still being overwritten by the browser settings*/
 
 .modal__button {
-  margin-top: 48px;
   width: 100%;
   padding: 0;
   font-size: 18px;
@@ -113,6 +112,7 @@ I cannot get the above to render to the browser, it's still being overwritten by
   border-radius: 2px;
   height: 50px;
   transition: font-size 1s ease;
+  margin-top: 18px;
 }
 
 @media screen and (max-width: 635px) {
@@ -129,9 +129,9 @@ I cannot get the above to render to the browser, it's still being overwritten by
     font-size: 18px;
   }
   .modal__button {
-    margin-top: 45px;
     font-size: 14px;
     height: 46px;
+    margin-top: 15px;
   }
 }
 
