--- a/blocks/gallery.css
+++ b/blocks/gallery.css
@@ -63,6 +63,10 @@
   transition: opacity 1s ease;
 }
 
+.gallery__like-button_active {
+  background-image: url(../images/like-active.svg);
+}
+
 .gallery__like-button:hover {
   opacity: 50%;
   cursor: pointer;
