--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -22,14 +22,18 @@
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   z-index: 999;
-  display: flex;
-  display: none;
+  /* display: none; */
+  visibility: hidden;
+  opacity: 0;
   padding: 0 19px;
+  transition: visibility 0s, opacity 0.5s ease-in;
 }
 
 .modal_opened {
+  visibility: visible;
+  opacity: 1;
   display: flex;
 }
 
@@ -44,6 +48,26 @@
   width: 100%;
 }
 
+.modal__container_type_preview {
+  padding: 0px;
+  border-radius: 0px;
+  max-width: fit-content;
+  max-height: fit-content;
+  background-color: transparent;
+}
+
+.modal__image {
+  max-width: 75vw;
+  max-height: 75vh;
+}
+
+.modal__text {
+  margin: 0;
+  padding-top: 10px;
+  font-size: 12px;
+  line-height: 1.2;
+}
+
 .modal__close {
   border: none;
   background-color: transparent;
@@ -56,9 +80,6 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-image: url(../images/close.svg);
-  transition: height 1s ease;
-  transition: width 1s ease;
-  transition: left 1s ease;
   transition: opacity 1s ease;
 }
 
