--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -67,6 +67,10 @@
   line-height: 1.2;
 }
 
+/* .modal__text::placeholder {
+  color: rgba(0, 0, 0, 0.2);
+} */
+
 .modal__close {
   border: none;
   background-color: transparent;
@@ -138,17 +142,20 @@
   transition: opacity 1s ease;
   margin-top: 48px;
 }
-
-.modal__submit_inactive {
-  color: black;
-  opacity: 80%;
-  background-color: #fff;
-  border-color: #000000cc;
-}
-
 .modal__submit:hover {
   opacity: 80%;
   cursor: pointer;
+}
+
+.modal__submit_inactive {
+  color: rgba(0, 0, 0, 0.2);
+  opacity: 80%;
+  background-color: #fff;
+  border-color: rgba(0, 0, 0, 0.2);
+}
+
+.modal__submit_inactive:hover {
+  cursor: default;
 }
 
 @media screen and (max-width: 635px) {
