--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -62,6 +62,22 @@
   cursor: pointer;
 }
 
+.profile__add-button {
+  background: transparent url(../images/add-icon.svg) center no-repeat;
+  height: 50px;
+  width: 150px;
+  margin-left: auto;
+  border: solid 2px white;
+  border-radius: 2px;
+  transition: width 1s ease;
+  transition: opacity 1s ease;
+}
+
+.profile__add-button:hover {
+  opacity: 60%;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 785px) {
   .profile__title {
     font-size: calc(42px * 0.7);
