--- a/src/blocks/card.css
+++ b/src/blocks/card.css
@@ -21,6 +21,10 @@
   height: 282px;
 }
 
+.card__image:hover {
+  cursor: pointer;
+}
+
 .card__description {
   display: flex;
   background-color: white;
